# BikeDataOverlay

./: .gitignore  BLUETOOTH_IMPLEMENTATION_PLAN.md  BLUETOOTH_IMPLEMENTATION_SUMMARY.md  BikeDataOverlay.sln  CLAUDE.md  CYCLING_OVERLAY_PLAN.md  MIGRATION_SUMMARY.md  README.md  TODO.md  package-lock.json  package.json  start.sh  tsconfig.json
.claude/: settings.local.json
.claude/commands/: run.md
BikeDataOverlayMaui/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  BikeDataOverlayMaui.csproj  FRAMELESS_WINDOW_FEATURES.md  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  README.md
BikeDataOverlayMaui/Converters/: ValueConverters.cs
BikeDataOverlayMaui/Models/: BluetoothDevice.cs  CyclingMetrics.cs  (+1 more)
app/: .eslintrc.json  ble-service.ts  forge.config.ts  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  types.ts  vite.config.ts  vite.main.config.ts  vite.preload.config.ts
backend/: BikeDataApi.csproj  Program.cs
frontend/: ble-service.js  bluetooth-service.js  index.html  main.js  main.ts  package-lock.json  package.json  playwright-demo.js  playwright.config.js  playwright.config.ts  renderer.js  renderer.ts  styles.css  tsconfig.json
prompts/: device-listing.md
qt-app/: CMakeLists.txt  Info.plist
qt-app/src/: main.cpp  mainwindow.cpp  mainwindow.h
qt-app/src/bluetooth/: bluetoothmanager.cpp  bluetoothmanager.h  fitnessdevice.cpp  fitnessdevice.h  ftmsprotocol.cpp  ftmsprotocol.h
qt-app/src/models/: cyclingmetrics.cpp  cyclingmetrics.h
qt-app/src/overlay/: overlaywindow.cpp  overlaywindow.h
(+89 files in other folders)
